etc/kubernetes/manifests/netpol-hasher.yaml
#Allow incoming traffic to hasher from worker
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: netpol-hasher
spec:
  podSelector:
    matchLabels:
      dockercoins: hasher
  ingress:
    - from:
        - podSelector:
            matchLabels:
              dockercoins: worker
      ports:
        - protocol: TCP
          port: 8081
