etc/kubernetes/manifests/netpol-rng.yaml
#Allow incoming traffic to rng from worker
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: netpol-rng
spec:
  podSelector:
    matchLabels:
      dockercoins: rng
  ingress:
    - from:
        - podSelector:
            matchLabels:
              dockercoins: worker
      ports:
        - protocol: TCP
          port: 8082
